# mpatch

./: Cargo.toml  LICENSE_APACHE  LICENSE_MIT  README.md
.github/workflows/: rust.yml
src/: diff.rs  diffs.rs  error.rs  files.rs  io.rs  lib.rs  matching.rs  patch.rs
src/patch/: alignment.rs  application.rs  filtering.rs  matching.rs
tests/: alignment.rs  diffs.rs  edge_cases.rs  filter.rs  match.rs  matching.rs  patch.rs  test_utils.rs
tests/binary/diffs/: binary.diff
tests/binary/source_variant/version-0/: hello_world
tests/binary/source_variant/version-1/: hello_world
tests/common/: mod.rs
tests/diffs/: additive.diff  anchor_below.diff  appending.diff  base_patch.diff  invariant.diff  mixed.diff  remove_non_existant.diff  simple.diff
tests/edge_cases/diffs/: added_file.diff  missing_target.diff  removed_file.diff  renamed_file.diff
tests/edge_cases/source_variant/: patch.diff
tests/edge_cases/source_variant/version-0/: permission_change.txt
tests/edge_cases/source_variant/version-1/: added_file.c  missing_target.c
tests/edge_cases/target_variant/version-0/: removed_file.c  renamed_file.c
tests/expected_patches/: additive.diff  anchor_below.diff  appending.diff  invariant.diff  mixed.diff  prepending.diff  remove_non_existant.diff  substractive.diff
tests/filter/diffs/: main.diff
tests/filter/expected_patches/: distance_0.diff  distance_1.diff  distance_10.diff  distance_3.diff
tests/samples/source_variant/: patch.diff
tests/samples/source_variant/version-0/: prepending.c  (+2 more)
tests/weird_edge_cases/diffs/: crlf.diff  mixed.diff
(+20 files in other folders)
