[package]
name = "mpatch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5.0", features = ["derive"]}
clap_derive = "4.5.0"
similar = "2.4.0"

[[bin]]
name = "mpatch"
test = true

